commit translated contents

--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.filterpivothierarchyloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.filterpivothierarchyloadoptions.yml
@@ -1,101 +1,90 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: d1fff3374a5ab577e979215eb60032ce881378a0
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30108119"
 items:
-- uid: excel_release.Excel.Interfaces.FilterPivotHierarchyLoadOptions
-  summary: >-
-    表示 Excel FilterPivotHierarchy。
+  - uid: excel_release.Excel.Interfaces.FilterPivotHierarchyLoadOptions
+    summary: |-
+      表示 Excel FilterPivotHierarchy。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: Excel.Interfaces.FilterPivotHierarchyLoadOptions
+    fullName: Excel.Interfaces.FilterPivotHierarchyLoadOptions
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.FilterPivotHierarchyLoadOptions.$all
+      - excel_release.Excel.Interfaces.FilterPivotHierarchyLoadOptions.enableMultipleFilterItems
+      - excel_release.Excel.Interfaces.FilterPivotHierarchyLoadOptions.id
+      - excel_release.Excel.Interfaces.FilterPivotHierarchyLoadOptions.name
+      - excel_release.Excel.Interfaces.FilterPivotHierarchyLoadOptions.position
+  - uid: excel_release.Excel.Interfaces.FilterPivotHierarchyLoadOptions.$all
+    name: $all
+    fullName: $all
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: '$all?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.FilterPivotHierarchyLoadOptions.enableMultipleFilterItems
+    summary: |-
+      确定是否允许多个筛选项。
 
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: Excel.Interfaces.FilterPivotHierarchyLoadOptions
-  fullName: Excel.Interfaces.FilterPivotHierarchyLoadOptions
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.FilterPivotHierarchyLoadOptions.$all
-  - excel_release.Excel.Interfaces.FilterPivotHierarchyLoadOptions.enableMultipleFilterItems
-  - excel_release.Excel.Interfaces.FilterPivotHierarchyLoadOptions.id
-  - excel_release.Excel.Interfaces.FilterPivotHierarchyLoadOptions.name
-  - excel_release.Excel.Interfaces.FilterPivotHierarchyLoadOptions.position
-- uid: excel_release.Excel.Interfaces.FilterPivotHierarchyLoadOptions.$all
-  name: $all
-  fullName: $all
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: '$all?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.FilterPivotHierarchyLoadOptions.enableMultipleFilterItems
-  summary: >-
-    确定是否允许多个筛选项。
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: enableMultipleFilterItems
+    fullName: enableMultipleFilterItems
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'enableMultipleFilterItems?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.FilterPivotHierarchyLoadOptions.id
+    summary: |-
+      FilterPivotHierarchy 的 ID。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: id
+    fullName: id
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'id?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.FilterPivotHierarchyLoadOptions.name
+    summary: |-
+      FilterPivotHierarchy 的名称。
 
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: enableMultipleFilterItems
-  fullName: enableMultipleFilterItems
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'enableMultipleFilterItems?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.FilterPivotHierarchyLoadOptions.id
-  summary: >-
-    FilterPivotHierarchy 的 ID。
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: name
+    fullName: name
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'name?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.FilterPivotHierarchyLoadOptions.position
+    summary: |-
+      FilterPivotHierarchy 的位置。
 
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: id
-  fullName: id
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'id?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.FilterPivotHierarchyLoadOptions.name
-  summary: >-
-    FilterPivotHierarchy 的名称。
-
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: name
-  fullName: name
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'name?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.FilterPivotHierarchyLoadOptions.position
-  summary: >-
-    FilterPivotHierarchy 的位置。
-
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: position
-  fullName: position
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'position?: boolean;'
-    return:
-      type:
-      - boolean
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: position
+    fullName: position
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'position?: boolean;'
+      return:
+        type:
+          - boolean
