--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.nameditemcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.nameditemcollectionloadoptions.yml
@@ -1,203 +1,186 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 14c905eced8936a1a8c53d8372f8c9f899b098b6
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30113705"
 items:
-- uid: excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions
-  summary: >-
-    属于工作簿或工作表的所有 NamedItem 对象的集合, 具体取决于它的访问方式。
+  - uid: excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions
+    summary: |-
+      属于工作簿或工作表的所有 NamedItem 对象的集合, 具体取决于它的访问方式。
 
+      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: Excel.Interfaces.NamedItemCollectionLoadOptions
+    fullName: Excel.Interfaces.NamedItemCollectionLoadOptions
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.$all
+      - excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.arrayValues
+      - excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.comment
+      - excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.formula
+      - excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.name
+      - excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.scope
+      - excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.type
+      - excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.value
+      - excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.visible
+      - excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.worksheet
+      - excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.worksheetOrNullObject
+  - uid: excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.$all
+    name: $all
+    fullName: $all
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: '$all?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.arrayValues
+    summary: |-
+      对于集合中的每一项: 返回一个对象, 其中包含已命名项目的值和类型。
 
-    \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: Excel.Interfaces.NamedItemCollectionLoadOptions
-  fullName: Excel.Interfaces.NamedItemCollectionLoadOptions
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.$all
-  - excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.arrayValues
-  - excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.comment
-  - excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.formula
-  - excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.name
-  - excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.scope
-  - excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.type
-  - excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.value
-  - excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.visible
-  - excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.worksheet
-  - excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.worksheetOrNullObject
-- uid: excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.$all
-  name: $all
-  fullName: $all
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: '$all?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.arrayValues
-  summary: >-
-    对于集合中的每一项: 返回一个对象, 其中包含已命名项目的值和类型。
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: arrayValues
+    fullName: arrayValues
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'arrayValues?: Excel.Interfaces.NamedItemArrayValuesLoadOptions;'
+      return:
+        type:
+          - excel.Excel.Interfaces.NamedItemArrayValuesLoadOptions
+  - uid: excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.comment
+    summary: |-
+      对于集合中的每一项: 代表与此名称关联的注释。
 
+      \[[API 集: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: comment
+    fullName: comment
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'comment?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.formula
+    summary: |-
+      对于集合中的每一项: 获取或设置已命名项的公式。 公式始终以等号 (=) 开头。
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: arrayValues
-  fullName: arrayValues
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'arrayValues?: Excel.Interfaces.NamedItemArrayValuesLoadOptions;'
-    return:
-      type:
-      - excel.Excel.Interfaces.NamedItemArrayValuesLoadOptions
-- uid: excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.comment
-  summary: >-
-    对于集合中的每一项: 代表与此名称关联的注释。
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: formula
+    fullName: formula
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'formula?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.name
+    summary: |-
+      对于集合中的每一项: 对象的名称。 只读。
 
+      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: name
+    fullName: name
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'name?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.scope
+    summary: |-
+      对于集合中的每一项: 指示名称是限定在工作簿中还是特定工作表。 可能的值为: 工作表、工作簿。 只读。
 
-    \[[API 集: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: comment
-  fullName: comment
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'comment?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.formula
-  summary: >-
-    对于集合中的每一项: 获取或设置已命名项的公式。 公式始终以等号 (=) 开头。
+      \[[API 集: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: scope
+    fullName: scope
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'scope?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.type
+    summary: |-
+      对于集合中的每一项: 指示由名称的公式返回的值的类型。 有关详细信息, 请参阅 NamedItemType。 只读。
 
+      \[[API 集: 字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: type
+    fullName: type
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'type?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.value
+    summary: |-
+      对于集合中的每一项: 代表由名称的公式计算的值。 对于已命名区域，将返回区域地址。 只读。
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: formula
-  fullName: formula
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'formula?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.name
-  summary: >-
-    对于集合中的每一项: 对象的名称。 只读。
+      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: value
+    fullName: value
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'value?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.visible
+    summary: |-
+      对于集合中的每一项: 指定对象是否可见。
 
+      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: visible
+    fullName: visible
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'visible?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.worksheet
+    summary: |-
+      对于集合中的每一项: 返回已命名项目的作用域所在的工作表。 如果项目的作用域改为工作簿, 则会引发错误。
 
-    \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: name
-  fullName: name
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'name?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.scope
-  summary: >-
-    对于集合中的每一项: 指示名称是限定在工作簿中还是特定工作表。 可能的值为: 工作表、工作簿。 只读。
+      \[[API 集: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: worksheet
+    fullName: worksheet
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'worksheet?: Excel.Interfaces.WorksheetLoadOptions;'
+      return:
+        type:
+          - excel.Excel.Interfaces.WorksheetLoadOptions
+  - uid: excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.worksheetOrNullObject
+    summary: |-
+      对于集合中的每一项: 返回已命名项目的作用域所在的工作表。 如果项改为限定到工作簿，将返回 NULL 对象。
 
-
-    \[[API 集: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: scope
-  fullName: scope
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'scope?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.type
-  summary: >-
-    对于集合中的每一项: 指示由名称的公式返回的值的类型。 有关详细信息, 请参阅 NamedItemType。 只读。
-
-
-    \[[API 集: 字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: type
-  fullName: type
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'type?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.value
-  summary: >-
-    对于集合中的每一项: 代表由名称的公式计算的值。 对于命名区域, 将返回区域地址。 只读。
-
-
-    \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: value
-  fullName: value
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'value?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.visible
-  summary: >-
-    对于集合中的每一项: 指定对象是否可见。
-
-
-    \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: visible
-  fullName: visible
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'visible?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.worksheet
-  summary: >-
-    对于集合中的每一项: 返回已命名项目的作用域所在的工作表。 如果项目的作用域改为工作簿, 则会引发错误。
-
-
-    \[[API 集: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: worksheet
-  fullName: worksheet
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'worksheet?: Excel.Interfaces.WorksheetLoadOptions;'
-    return:
-      type:
-      - excel.Excel.Interfaces.WorksheetLoadOptions
-- uid: excel_release.Excel.Interfaces.NamedItemCollectionLoadOptions.worksheetOrNullObject
-  summary: >-
-    对于集合中的每一项: 返回已命名项目的作用域所在的工作表。 如果项目的范围限定为工作簿, 则返回 null 对象。
-
-
-    \[[API 集: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: worksheetOrNullObject
-  fullName: worksheetOrNullObject
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'worksheetOrNullObject?: Excel.Interfaces.WorksheetLoadOptions;'
-    return:
-      type:
-      - excel.Excel.Interfaces.WorksheetLoadOptions
+      \[[API 集: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: worksheetOrNullObject
+    fullName: worksheetOrNullObject
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'worksheetOrNullObject?: Excel.Interfaces.WorksheetLoadOptions;'
+      return:
+        type:
+          - excel.Excel.Interfaces.WorksheetLoadOptions
