--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.datapivothierarchycollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.datapivothierarchycollectionloadoptions.yml
@@ -1,152 +1,138 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 055bbe73e129464ba8b9decc5305111b9e55207b
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30105130"
 items:
-- uid: excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions
-  summary: >-
-    代表与数据透视表相关联的 DataPivotHierarchy 项目的集合。
+  - uid: excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions
+    summary: |-
+      代表与数据透视表相关联的 DataPivotHierarchy 项目的集合。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions
+    fullName: Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.$all
+      - excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.field
+      - excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.id
+      - excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.name
+      - excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.numberFormat
+      - excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.position
+      - excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.showAs
+      - excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.summarizeBy
+  - uid: excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.$all
+    name: $all
+    fullName: $all
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: '$all?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.field
+    summary: |-
+      对于集合中的每一项: 返回与 DataPivotHierarchy 相关联的透视字段。
 
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions
-  fullName: Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.$all
-  - excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.field
-  - excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.id
-  - excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.name
-  - excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.numberFormat
-  - excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.position
-  - excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.showAs
-  - excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.summarizeBy
-- uid: excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.$all
-  name: $all
-  fullName: $all
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: '$all?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.field
-  summary: >-
-    对于集合中的每一项: 返回与 DataPivotHierarchy 相关联的透视字段。
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: field
+    fullName: field
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'field?: Excel.Interfaces.PivotFieldLoadOptions;'
+      return:
+        type:
+          - excel.Excel.Interfaces.PivotFieldLoadOptions
+  - uid: excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.id
+    summary: |-
+      对于集合中的每一项: DataPivotHierarchy 的 Id。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: id
+    fullName: id
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'id?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.name
+    summary: |-
+      对于集合中的每一项: DataPivotHierarchy 的名称。
 
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: field
-  fullName: field
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'field?: Excel.Interfaces.PivotFieldLoadOptions;'
-    return:
-      type:
-      - excel.Excel.Interfaces.PivotFieldLoadOptions
-- uid: excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.id
-  summary: >-
-    对于集合中的每一项: DataPivotHierarchy 的 Id。
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: name
+    fullName: name
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'name?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.numberFormat
+    summary: |-
+      对于集合中的每一项: DataPivotHierarchy 的数字格式。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: numberFormat
+    fullName: numberFormat
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'numberFormat?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.position
+    summary: |-
+      对于集合中的每一项: DataPivotHierarchy 的位置。
 
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: id
-  fullName: id
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'id?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.name
-  summary: >-
-    对于集合中的每一项: DataPivotHierarchy 的名称。
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: position
+    fullName: position
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'position?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.showAs
+    summary: |-
+      对于集合中的每一项: 确定是否应将数据显示为特定的汇总计算。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: showAs
+    fullName: showAs
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'showAs?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.summarizeBy
+    summary: |-
+      对于集合中的每一项: 确定是否显示 DataPivotHierarchy 的所有项。
 
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: name
-  fullName: name
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'name?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.numberFormat
-  summary: >-
-    对于集合中的每一项: DataPivotHierarchy 的数字格式。
-
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: numberFormat
-  fullName: numberFormat
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'numberFormat?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.position
-  summary: >-
-    对于集合中的每一项: DataPivotHierarchy 的位置。
-
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: position
-  fullName: position
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'position?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.showAs
-  summary: >-
-    对于集合中的每一项: 确定是否应将数据显示为特定的汇总计算。
-
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: showAs
-  fullName: showAs
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'showAs?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.DataPivotHierarchyCollectionLoadOptions.summarizeBy
-  summary: >-
-    对于集合中的每一项: 确定是否显示 DataPivotHierarchy 的所有项。
-
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: summarizeBy
-  fullName: summarizeBy
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'summarizeBy?: boolean;'
-    return:
-      type:
-      - boolean
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: summarizeBy
+    fullName: summarizeBy
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'summarizeBy?: boolean;'
+      return:
+        type:
+          - boolean
