--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.nameditemarrayvaluesdata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.nameditemarrayvaluesdata.yml
@@ -1,51 +1,43 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 84f418dbace002cdabe925ed22421f7e913a1d3b
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30106243"
 items:
-- uid: excel_release.Excel.Interfaces.NamedItemArrayValuesData
-  summary: 描述通过调用 "namedItemArrayValues ()" 返回的数据的接口。
-  name: Excel.Interfaces.NamedItemArrayValuesData
-  fullName: Excel.Interfaces.NamedItemArrayValuesData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.NamedItemArrayValuesData.types
-  - excel_release.Excel.Interfaces.NamedItemArrayValuesData.values
-- uid: excel_release.Excel.Interfaces.NamedItemArrayValuesData.types
-  summary: >-
-    表示已命名项目数组中每个项目的类型
+  - uid: excel_release.Excel.Interfaces.NamedItemArrayValuesData
+    summary: 描述通过调用 "namedItemArrayValues ()" 返回的数据的接口。
+    name: Excel.Interfaces.NamedItemArrayValuesData
+    fullName: Excel.Interfaces.NamedItemArrayValuesData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.NamedItemArrayValuesData.types
+      - excel_release.Excel.Interfaces.NamedItemArrayValuesData.values
+  - uid: excel_release.Excel.Interfaces.NamedItemArrayValuesData.types
+    summary: |-
+      表示已命名项目数组中每个项目的类型
 
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: types
+    fullName: types
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'types?: Excel.RangeValueType[][];'
+      return:
+        type:
+          - 'Excel.RangeValueType[][]'
+  - uid: excel_release.Excel.Interfaces.NamedItemArrayValuesData.values
+    summary: |-
+      表示已命名项目数组中每个项目的值。
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: types
-  fullName: types
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'types?: Excel.RangeValueType[][];'
-    return:
-      type:
-      - Excel.RangeValueType[][]
-- uid: excel_release.Excel.Interfaces.NamedItemArrayValuesData.values
-  summary: >-
-    表示已命名项目数组中每个项目的值。
-
-
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: values
-  fullName: values
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'values?: any[][];'
-    return:
-      type:
-      - any[][]
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: values
+    fullName: values
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'values?: any[][];'
+      return:
+        type:
+          - 'any[][]'
