--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.nameditemcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.nameditemcollectionupdatedata.yml
@@ -1,29 +1,23 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: ff51032067d5e64517f39a07ae1e75c45566d12e
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30111136"
 items:
-- uid: excel_release.Excel.Interfaces.NamedItemCollectionUpdateData
-  summary: 用于更新 NamedItemCollection 对象上的数据的接口, 用于在 "NamedItemCollection" 中使用 (<!-- -->{...}<!-- -->)".
-  name: Excel.Interfaces.NamedItemCollectionUpdateData
-  fullName: Excel.Interfaces.NamedItemCollectionUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.NamedItemCollectionUpdateData.items
-- uid: excel_release.Excel.Interfaces.NamedItemCollectionUpdateData.items
-  name: items
-  fullName: items
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'items?: Excel.Interfaces.NamedItemData[];'
-    return:
-      type:
-      - Excel.Interfaces.NamedItemData[]
+  - uid: excel_release.Excel.Interfaces.NamedItemCollectionUpdateData
+    summary: '一个用于更新 NamedItemCollection 对象上的数据的接口, 可用于 "NamedItemCollection (<!-- -->{ ... }<!-- -->)".'
+    name: Excel.Interfaces.NamedItemCollectionUpdateData
+    fullName: Excel.Interfaces.NamedItemCollectionUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.NamedItemCollectionUpdateData.items
+  - uid: excel_release.Excel.Interfaces.NamedItemCollectionUpdateData.items
+    name: items
+    fullName: items
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'items?: Excel.Interfaces.NamedItemData[];'
+      return:
+        type:
+          - 'Excel.Interfaces.NamedItemData[]'
