--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.nameditemdata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.nameditemdata.yml
@@ -1,153 +1,139 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 6f7de1ad3928ef78648b79b2760499c2a94349e7
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30112907"
 items:
-- uid: excel_release.Excel.Interfaces.NamedItemData
-  summary: 描述通过调用 "namedItem ()" 返回的数据的接口。
-  name: Excel.Interfaces.NamedItemData
-  fullName: Excel.Interfaces.NamedItemData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.NamedItemData.arrayValues
-  - excel_release.Excel.Interfaces.NamedItemData.comment
-  - excel_release.Excel.Interfaces.NamedItemData.formula
-  - excel_release.Excel.Interfaces.NamedItemData.name
-  - excel_release.Excel.Interfaces.NamedItemData.scope
-  - excel_release.Excel.Interfaces.NamedItemData.type
-  - excel_release.Excel.Interfaces.NamedItemData.value
-  - excel_release.Excel.Interfaces.NamedItemData.visible
-- uid: excel_release.Excel.Interfaces.NamedItemData.arrayValues
-  summary: >-
-    返回包含已命名项目的值和类型的对象。 只读。
+  - uid: excel_release.Excel.Interfaces.NamedItemData
+    summary: 描述通过调用 "namedItem ()" 返回的数据的接口。
+    name: Excel.Interfaces.NamedItemData
+    fullName: Excel.Interfaces.NamedItemData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.NamedItemData.arrayValues
+      - excel_release.Excel.Interfaces.NamedItemData.comment
+      - excel_release.Excel.Interfaces.NamedItemData.formula
+      - excel_release.Excel.Interfaces.NamedItemData.name
+      - excel_release.Excel.Interfaces.NamedItemData.scope
+      - excel_release.Excel.Interfaces.NamedItemData.type
+      - excel_release.Excel.Interfaces.NamedItemData.value
+      - excel_release.Excel.Interfaces.NamedItemData.visible
+  - uid: excel_release.Excel.Interfaces.NamedItemData.arrayValues
+    summary: |-
+      返回包含已命名项目的值和类型的对象。 只读。
 
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: arrayValues
+    fullName: arrayValues
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'arrayValues?: Excel.Interfaces.NamedItemArrayValuesData;'
+      return:
+        type:
+          - excel.Excel.Interfaces.NamedItemArrayValuesData
+  - uid: excel_release.Excel.Interfaces.NamedItemData.comment
+    summary: |-
+      表示与此名称相关联的注释。
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: arrayValues
-  fullName: arrayValues
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'arrayValues?: Excel.Interfaces.NamedItemArrayValuesData;'
-    return:
-      type:
-      - excel.Excel.Interfaces.NamedItemArrayValuesData
-- uid: excel_release.Excel.Interfaces.NamedItemData.comment
-  summary: >-
-    表示与此名称相关联的注释。
+      \[[API 集: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: comment
+    fullName: comment
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'comment?: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.Interfaces.NamedItemData.formula
+    summary: |-
+      获取或设置的已命名项目的公式。 公式始终以等号 (=) 开头。
 
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: formula
+    fullName: formula
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'formula?: any;'
+      return:
+        type:
+          - any
+  - uid: excel_release.Excel.Interfaces.NamedItemData.name
+    summary: |-
+      对象的名称。 只读。
 
-    \[[API 集: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: comment
-  fullName: comment
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'comment?: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.Interfaces.NamedItemData.formula
-  summary: >-
-    获取或设置的已命名项目的公式。 公式始终以等号 (=) 开头。
+      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: name
+    fullName: name
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'name?: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.Interfaces.NamedItemData.scope
+    summary: |-
+      指明是否将 name 限定到工作簿或特定工作表。 可能的值为: 工作表、工作簿。 只读。
 
+      \[[API 集: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: scope
+    fullName: scope
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'scope?: Excel.NamedItemScope | "Worksheet" | "Workbook";'
+      return:
+        type:
+          - Excel.NamedItemScope | "Worksheet" | "Workbook"
+  - uid: excel_release.Excel.Interfaces.NamedItemData.type
+    summary: |-
+      指明 name 公式返回的值的类型。 有关详细信息, 请参阅 NamedItemType。 只读。
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: formula
-  fullName: formula
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'formula?: any;'
-    return:
-      type:
-      - any
-- uid: excel_release.Excel.Interfaces.NamedItemData.name
-  summary: >-
-    对象的名称。只读。
+      \[[API 集: 字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: type
+    fullName: type
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'type?: Excel.NamedItemType | "String" | "Integer" | "Double" | "Boolean" | "Range" | "Error" | "Array";'
+      return:
+        type:
+          - Excel.NamedItemType | "String" | "Integer" | "Double" | "Boolean" | "Range" | "Error" | "Array"
+  - uid: excel_release.Excel.Interfaces.NamedItemData.value
+    summary: |-
+      表示 name 公式计算出的值。 对于已命名区域，将返回区域地址。 只读。
 
+      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: value
+    fullName: value
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'value?: any;'
+      return:
+        type:
+          - any
+  - uid: excel_release.Excel.Interfaces.NamedItemData.visible
+    summary: |-
+      指定对象是否可见。
 
-    \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: name
-  fullName: name
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'name?: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.Interfaces.NamedItemData.scope
-  summary: >-
-    指示名称是工作簿的范围还是指定的工作表。 可能的值为: 工作表、工作簿。 只读。
-
-
-    \[[API 集: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: scope
-  fullName: scope
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'scope?: Excel.NamedItemScope | "Worksheet" | "Workbook";'
-    return:
-      type:
-      - Excel.NamedItemScope | "Worksheet" | "Workbook"
-- uid: excel_release.Excel.Interfaces.NamedItemData.type
-  summary: >-
-    指示名称的公式返回的值的类型。 有关详细信息, 请参阅 NamedItemType。 只读。
-
-
-    \[[API 集: 字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: type
-  fullName: type
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'type?: Excel.NamedItemType | "String" | "Integer" | "Double" | "Boolean" | "Range" | "Error" | "Array";'
-    return:
-      type:
-      - Excel.NamedItemType | "String" | "Integer" | "Double" | "Boolean" | "Range" | "Error" | "Array"
-- uid: excel_release.Excel.Interfaces.NamedItemData.value
-  summary: >-
-    表示 name 公式计算出的值。对于已命名区域，将返回区域地址。只读。
-
-
-    \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: value
-  fullName: value
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'value?: any;'
-    return:
-      type:
-      - any
-- uid: excel_release.Excel.Interfaces.NamedItemData.visible
-  summary: >-
-    指定对象是否可见。
-
-
-    \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: visible
-  fullName: visible
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'visible?: boolean;'
-    return:
-      type:
-      - boolean
+      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: visible
+    fullName: visible
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'visible?: boolean;'
+      return:
+        type:
+          - boolean
