commit bilingual contents

--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.iconsetconditionalformatdata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.iconsetconditionalformatdata.yml
@@ -1,85 +1,75 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 4f2eda28bd6f3209459d907c7bea7cf011b403d8
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30114839"
 items:
-- uid: excel_release.Excel.Interfaces.IconSetConditionalFormatData
-  summary: <span data-ttu-id="cda81-101">描述通过调用 "iconSetConditionalFormat ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="cda81-101">An interface describing the data returned by calling "iconSetConditionalFormat.toJSON()".</span></span>
-  name: Excel.Interfaces.IconSetConditionalFormatData
-  fullName: Excel.Interfaces.IconSetConditionalFormatData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.IconSetConditionalFormatData.criteria
-  - excel_release.Excel.Interfaces.IconSetConditionalFormatData.reverseIconOrder
-  - excel_release.Excel.Interfaces.IconSetConditionalFormatData.showIconOnly
-  - excel_release.Excel.Interfaces.IconSetConditionalFormatData.style
-- uid: excel_release.Excel.Interfaces.IconSetConditionalFormatData.criteria
-  summary: >-
-    <span data-ttu-id="cda81-102">用于条件图标的规则和潜在自定义图标的条件和 IconSets 的数组。</span><span class="sxs-lookup"><span data-stu-id="cda81-102">An array of Criteria and IconSets for the rules and potential custom icons for conditional icons.</span></span> <span data-ttu-id="cda81-103">请注意, 对于第一个条件, 只有自定义图标可以修改, 而类型、公式和运算符在设置时将被忽略。</span><span class="sxs-lookup"><span data-stu-id="cda81-103">Note that for the first criterion only the custom icon can be modified, while type, formula, and operator will be ignored when set.</span></span>
+  - uid: excel_release.Excel.Interfaces.IconSetConditionalFormatData
+    summary: <span data-ttu-id="92deb-101">描述通过调用 "iconSetConditionalFormat ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="92deb-101">An interface describing the data returned by calling "iconSetConditionalFormat.toJSON()".</span></span>
+    name: Excel.Interfaces.IconSetConditionalFormatData
+    fullName: Excel.Interfaces.IconSetConditionalFormatData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.IconSetConditionalFormatData.criteria
+      - excel_release.Excel.Interfaces.IconSetConditionalFormatData.reverseIconOrder
+      - excel_release.Excel.Interfaces.IconSetConditionalFormatData.showIconOnly
+      - excel_release.Excel.Interfaces.IconSetConditionalFormatData.style
+  - uid: excel_release.Excel.Interfaces.IconSetConditionalFormatData.criteria
+    summary: |-
+      <span data-ttu-id="92deb-102">用于条件图标的规则和潜在自定义图标的条件和 IconSets 的数组。</span><span class="sxs-lookup"><span data-stu-id="92deb-102">An array of Criteria and IconSets for the rules and potential custom icons for conditional icons.</span></span> <span data-ttu-id="92deb-103">请注意, 对于第一个条件, 只有自定义图标可以修改, 而类型、公式和运算符在设置时将被忽略。</span><span class="sxs-lookup"><span data-stu-id="92deb-103">Note that for the first criterion only the custom icon can be modified, while type, formula, and operator will be ignored when set.</span></span>
 
+      <span data-ttu-id="92deb-104">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92deb-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: criteria
+    fullName: criteria
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'criteria?: Excel.ConditionalIconCriterion[];'
+      return:
+        type:
+          - 'Excel.ConditionalIconCriterion[]'
+  - uid: excel_release.Excel.Interfaces.IconSetConditionalFormatData.reverseIconOrder
+    summary: |-
+      <span data-ttu-id="92deb-105">如果为 true, 则反转 IconSet 的图标订单。</span><span class="sxs-lookup"><span data-stu-id="92deb-105">If true, reverses the icon orders for the IconSet.</span></span> <span data-ttu-id="92deb-106">请注意, 如果使用自定义图标, 则不能设置此设置。</span><span class="sxs-lookup"><span data-stu-id="92deb-106">Note that this cannot be set if custom icons are used.</span></span>
 
-    <span data-ttu-id="cda81-104">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cda81-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: criteria
-  fullName: criteria
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'criteria?: Excel.ConditionalIconCriterion[];'
-    return:
-      type:
-      - Excel.ConditionalIconCriterion[]
-- uid: excel_release.Excel.Interfaces.IconSetConditionalFormatData.reverseIconOrder
-  summary: >-
-    <span data-ttu-id="cda81-p102">如果为 true，则反转 IconSet 的图标顺序。注意，如果使用自定义图标，则不能进行设置。</span><span class="sxs-lookup"><span data-stu-id="cda81-p102">If true, reverses the icon orders for the IconSet. Note that this cannot be set if custom icons are used.</span></span>
+      <span data-ttu-id="92deb-107">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92deb-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: reverseIconOrder
+    fullName: reverseIconOrder
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'reverseIconOrder?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.IconSetConditionalFormatData.showIconOnly
+    summary: |-
+      <span data-ttu-id="92deb-108">如果为 true，则隐藏值并仅显示图标。</span><span class="sxs-lookup"><span data-stu-id="92deb-108">If true, hides the values and only shows icons.</span></span>
 
+      <span data-ttu-id="92deb-109">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92deb-109">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: showIconOnly
+    fullName: showIconOnly
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'showIconOnly?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.IconSetConditionalFormatData.style
+    summary: |-
+      <span data-ttu-id="92deb-110">如果设置, 则显示条件格式的 IconSet 选项。</span><span class="sxs-lookup"><span data-stu-id="92deb-110">If set, displays the IconSet option for the conditional format.</span></span>
 
-    <span data-ttu-id="cda81-107">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cda81-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: reverseIconOrder
-  fullName: reverseIconOrder
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'reverseIconOrder?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.IconSetConditionalFormatData.showIconOnly
-  summary: >-
-    <span data-ttu-id="cda81-108">如果为 true，则隐藏值并仅显示图标。</span><span class="sxs-lookup"><span data-stu-id="cda81-108">If true, hides the values and only shows icons.</span></span>
-
-
-    <span data-ttu-id="cda81-109">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cda81-109">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: showIconOnly
-  fullName: showIconOnly
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'showIconOnly?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.IconSetConditionalFormatData.style
-  summary: >-
-    <span data-ttu-id="cda81-110">如果设置, 则显示条件格式的 IconSet 选项。</span><span class="sxs-lookup"><span data-stu-id="cda81-110">If set, displays the IconSet option for the conditional format.</span></span>
-
-
-    <span data-ttu-id="cda81-111">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cda81-111">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: style
-  fullName: style
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'style?: Excel.IconSet | "Invalid" | "ThreeArrows" | "ThreeArrowsGray" | "ThreeFlags" | "ThreeTrafficLights1" | "ThreeTrafficLights2" | "ThreeSigns" | "ThreeSymbols" | "ThreeSymbols2" | "FourArrows" | "FourArrowsGray" | "FourRedToBlack" | "FourRating" | "FourTrafficLights" | "FiveArrows" | "FiveArrowsGray" | "FiveRating" | "FiveQuarters" | "ThreeStars" | "ThreeTriangles" | "FiveBoxes" | "LinkedEntityFinanceIcon" | "LinkedEntityMapIcon";'
-    return:
-      type:
-      - Excel.IconSet | "Invalid" | "ThreeArrows" | "ThreeArrowsGray" | "ThreeFlags" | "ThreeTrafficLights1" | "ThreeTrafficLights2" | "ThreeSigns" | "ThreeSymbols" | "ThreeSymbols2" | "FourArrows" | "FourArrowsGray" | "FourRedToBlack" | "FourRating" | "FourTrafficLights" | "FiveArrows" | "FiveArrowsGray" | "FiveRating" | "FiveQuarters" | "ThreeStars" | "ThreeTriangles" | "FiveBoxes" | "LinkedEntityFinanceIcon" | "LinkedEntityMapIcon"
+      <span data-ttu-id="92deb-111">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="92deb-111">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: style
+    fullName: style
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'style?: Excel.IconSet | "Invalid" | "ThreeArrows" | "ThreeArrowsGray" | "ThreeFlags" | "ThreeTrafficLights1" | "ThreeTrafficLights2" | "ThreeSigns" | "ThreeSymbols" | "ThreeSymbols2" | "FourArrows" | "FourArrowsGray" | "FourRedToBlack" | "FourRating" | "FourTrafficLights" | "FiveArrows" | "FiveArrowsGray" | "FiveRating" | "FiveQuarters" | "ThreeStars" | "ThreeTriangles" | "FiveBoxes" | "LinkedEntityFinanceIcon" | "LinkedEntityMapIcon";'
+      return:
+        type:
+          - Excel.IconSet | "Invalid" | "ThreeArrows" | "ThreeArrowsGray" | "ThreeFlags" | "ThreeTrafficLights1" | "ThreeTrafficLights2" | "ThreeSigns" | "ThreeSymbols" | "ThreeSymbols2" | "FourArrows" | "FourArrowsGray" | "FourRedToBlack" | "FourRating" | "FourTrafficLights" | "FiveArrows" | "FiveArrowsGray" | "FiveRating" | "FiveQuarters" | "ThreeStars" | "ThreeTriangles" | "FiveBoxes" | "LinkedEntityFinanceIcon" | "LinkedEntityMapIcon"
