--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.imagedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.imagedata.yml
@@ -1,16 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: a86dd342d98c658a29c3c4e2c84e56b0f0a37e8e
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30115917"
 items:
-- uid: excel_release.Excel.Interfaces.ImageData
-  summary: <span data-ttu-id="af81a-101">描述通过调用 "toJSON ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="af81a-101">An interface describing the data returned by calling "image.toJSON()".</span></span>
-  name: Excel.Interfaces.ImageData
-  fullName: Excel.Interfaces.ImageData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
+  - uid: excel_release.Excel.Interfaces.ImageData
+    summary: <span data-ttu-id="b1083-101">描述通过调用 "toJSON ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="b1083-101">An interface describing the data returned by calling "image.toJSON()".</span></span>
+    name: Excel.Interfaces.ImageData
+    fullName: Excel.Interfaces.ImageData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
