--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.customxmlpartcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.customxmlpartcollectionloadoptions.yml
@@ -1,67 +1,58 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 3d23227b708700b3e684f45d4dcc1b16bece8249
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30117548"
 items:
-- uid: excel_release.Excel.Interfaces.CustomXmlPartCollectionLoadOptions
-  summary: >-
-    <span data-ttu-id="db035-101">自定义 XML 部件的集合。</span><span class="sxs-lookup"><span data-stu-id="db035-101">A collection of custom XML parts.</span></span>
+  - uid: excel_release.Excel.Interfaces.CustomXmlPartCollectionLoadOptions
+    summary: |-
+      <span data-ttu-id="742f6-101">自定义 XML 部件的集合。</span><span class="sxs-lookup"><span data-stu-id="742f6-101">A collection of custom XML parts.</span></span>
 
+      <span data-ttu-id="742f6-102">\[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="742f6-102">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: Excel.Interfaces.CustomXmlPartCollectionLoadOptions
+    fullName: Excel.Interfaces.CustomXmlPartCollectionLoadOptions
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.CustomXmlPartCollectionLoadOptions.$all
+      - excel_release.Excel.Interfaces.CustomXmlPartCollectionLoadOptions.id
+      - excel_release.Excel.Interfaces.CustomXmlPartCollectionLoadOptions.namespaceUri
+  - uid: excel_release.Excel.Interfaces.CustomXmlPartCollectionLoadOptions.$all
+    name: $all
+    fullName: $all
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: '$all?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.CustomXmlPartCollectionLoadOptions.id
+    summary: |-
+      <span data-ttu-id="742f6-103">对于集合中的每一项: 自定义 XML 部件的 ID。</span><span class="sxs-lookup"><span data-stu-id="742f6-103">For EACH ITEM in the collection: The custom XML part's ID.</span></span> <span data-ttu-id="742f6-104">只读。</span><span class="sxs-lookup"><span data-stu-id="742f6-104">Read-only.</span></span>
 
-    <span data-ttu-id="db035-102">\[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db035-102">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: Excel.Interfaces.CustomXmlPartCollectionLoadOptions
-  fullName: Excel.Interfaces.CustomXmlPartCollectionLoadOptions
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.CustomXmlPartCollectionLoadOptions.$all
-  - excel_release.Excel.Interfaces.CustomXmlPartCollectionLoadOptions.id
-  - excel_release.Excel.Interfaces.CustomXmlPartCollectionLoadOptions.namespaceUri
-- uid: excel_release.Excel.Interfaces.CustomXmlPartCollectionLoadOptions.$all
-  name: $all
-  fullName: $all
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: '$all?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.CustomXmlPartCollectionLoadOptions.id
-  summary: >-
-    <span data-ttu-id="db035-103">对于集合中的每一项: 自定义 XML 部件的 ID。</span><span class="sxs-lookup"><span data-stu-id="db035-103">For EACH ITEM in the collection: The custom XML part's ID.</span></span> <span data-ttu-id="db035-104">只读。</span><span class="sxs-lookup"><span data-stu-id="db035-104">Read-only.</span></span>
+      <span data-ttu-id="742f6-105">\[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="742f6-105">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: id
+    fullName: id
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'id?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.CustomXmlPartCollectionLoadOptions.namespaceUri
+    summary: |-
+      <span data-ttu-id="742f6-106">对于集合中的每一项: 自定义 XML 部件的命名空间 URI。</span><span class="sxs-lookup"><span data-stu-id="742f6-106">For EACH ITEM in the collection: The custom XML part's namespace URI.</span></span> <span data-ttu-id="742f6-107">只读。</span><span class="sxs-lookup"><span data-stu-id="742f6-107">Read-only.</span></span>
 
-
-    <span data-ttu-id="db035-105">\[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db035-105">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: id
-  fullName: id
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'id?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.CustomXmlPartCollectionLoadOptions.namespaceUri
-  summary: >-
-    <span data-ttu-id="db035-106">对于集合中的每一项: 自定义 XML 部件的命名空间 URI。</span><span class="sxs-lookup"><span data-stu-id="db035-106">For EACH ITEM in the collection: The custom XML part's namespace URI.</span></span> <span data-ttu-id="db035-107">只读。</span><span class="sxs-lookup"><span data-stu-id="db035-107">Read-only.</span></span>
-
-
-    <span data-ttu-id="db035-108">\[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db035-108">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: namespaceUri
-  fullName: namespaceUri
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'namespaceUri?: boolean;'
-    return:
-      type:
-      - boolean
+      <span data-ttu-id="742f6-108">\[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="742f6-108">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: namespaceUri
+    fullName: namespaceUri
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'namespaceUri?: boolean;'
+      return:
+        type:
+          - boolean
