--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.customxmlpartcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.customxmlpartcollectionupdatedata.yml
@@ -1,29 +1,23 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: f168d7d4d459fc94dc5b017da0073f7ba076638a
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30113467"
 items:
-- uid: excel_release.Excel.Interfaces.CustomXmlPartCollectionUpdateData
-  summary: <span data-ttu-id="f0095-101">用于更新 CustomXmlPartCollection 对象上的数据的接口, 用于在 "CustomXmlPartCollection" 中使用 (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="f0095-101">An interface for updating data on the CustomXmlPartCollection object, for use in "customXmlPartCollection.set(<!-- -->{ ... }<!-- -->)".</span></span>
-  name: Excel.Interfaces.CustomXmlPartCollectionUpdateData
-  fullName: Excel.Interfaces.CustomXmlPartCollectionUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.CustomXmlPartCollectionUpdateData.items
-- uid: excel_release.Excel.Interfaces.CustomXmlPartCollectionUpdateData.items
-  name: items
-  fullName: items
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'items?: Excel.Interfaces.CustomXmlPartData[];'
-    return:
-      type:
-      - Excel.Interfaces.CustomXmlPartData[]
+  - uid: excel_release.Excel.Interfaces.CustomXmlPartCollectionUpdateData
+    summary: '<span data-ttu-id="68cb0-101">一个用于更新 CustomXmlPartCollection 对象上的数据的接口, 可用于 "CustomXmlPartCollection (</span><span class="sxs-lookup"><span data-stu-id="68cb0-101">An interface for updating data on the CustomXmlPartCollection object, for use in "customXmlPartCollection.set(</span></span><!-- --><span data-ttu-id="68cb0-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="68cb0-102"></span></span><!-- --><span data-ttu-id="68cb0-103">)".</span><span class="sxs-lookup"><span data-stu-id="68cb0-103"></span></span>'
+    name: Excel.Interfaces.CustomXmlPartCollectionUpdateData
+    fullName: Excel.Interfaces.CustomXmlPartCollectionUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.CustomXmlPartCollectionUpdateData.items
+  - uid: excel_release.Excel.Interfaces.CustomXmlPartCollectionUpdateData.items
+    name: items
+    fullName: items
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'items?: Excel.Interfaces.CustomXmlPartData[];'
+      return:
+        type:
+          - 'Excel.Interfaces.CustomXmlPartData[]'
