--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.filterloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.filterloadoptions.yml
@@ -1,50 +1,42 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 84c781f81b077bedde5b8dbe2470f3918bee0dff
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30106292"
 items:
-- uid: excel_release.Excel.Interfaces.FilterLoadOptions
-  summary: >-
-    <span data-ttu-id="20099-101">管理表列的筛选。</span><span class="sxs-lookup"><span data-stu-id="20099-101">Manages the filtering of a table's column.</span></span>
+  - uid: excel_release.Excel.Interfaces.FilterLoadOptions
+    summary: |-
+      <span data-ttu-id="5e096-101">管理表格列的筛选。</span><span class="sxs-lookup"><span data-stu-id="5e096-101">Manages the filtering of a table's column.</span></span>
 
+      <span data-ttu-id="5e096-102">\[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5e096-102">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: Excel.Interfaces.FilterLoadOptions
+    fullName: Excel.Interfaces.FilterLoadOptions
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.FilterLoadOptions.$all
+      - excel_release.Excel.Interfaces.FilterLoadOptions.criteria
+  - uid: excel_release.Excel.Interfaces.FilterLoadOptions.$all
+    name: $all
+    fullName: $all
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: '$all?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.FilterLoadOptions.criteria
+    summary: |-
+      <span data-ttu-id="5e096-103">给定列上当前应用的筛选器。</span><span class="sxs-lookup"><span data-stu-id="5e096-103">The currently applied filter on the given column.</span></span> <span data-ttu-id="5e096-104">只读。</span><span class="sxs-lookup"><span data-stu-id="5e096-104">Read-only.</span></span>
 
-    <span data-ttu-id="20099-102">\[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="20099-102">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: Excel.Interfaces.FilterLoadOptions
-  fullName: Excel.Interfaces.FilterLoadOptions
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.FilterLoadOptions.$all
-  - excel_release.Excel.Interfaces.FilterLoadOptions.criteria
-- uid: excel_release.Excel.Interfaces.FilterLoadOptions.$all
-  name: $all
-  fullName: $all
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: '$all?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.FilterLoadOptions.criteria
-  summary: >-
-    <span data-ttu-id="20099-p101">给定列上当前应用的筛选器。只读。</span><span class="sxs-lookup"><span data-stu-id="20099-p101">The currently applied filter on the given column. Read-only.</span></span>
-
-
-    <span data-ttu-id="20099-105">\[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="20099-105">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: criteria
-  fullName: criteria
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'criteria?: boolean;'
-    return:
-      type:
-      - boolean
+      <span data-ttu-id="5e096-105">\[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5e096-105">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: criteria
+    fullName: criteria
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'criteria?: boolean;'
+      return:
+        type:
+          - boolean
