--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.filterpivothierarchydata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.filterpivothierarchydata.yml
@@ -1,102 +1,91 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 7a15aa75e73585746fc83ab90209d8fd288b2ef5
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30112998"
 items:
-- uid: excel_release.Excel.Interfaces.FilterPivotHierarchyData
-  summary: <span data-ttu-id="2cc1e-101">描述通过调用 "filterPivotHierarchy ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="2cc1e-101">An interface describing the data returned by calling "filterPivotHierarchy.toJSON()".</span></span>
-  name: Excel.Interfaces.FilterPivotHierarchyData
-  fullName: Excel.Interfaces.FilterPivotHierarchyData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.FilterPivotHierarchyData.enableMultipleFilterItems
-  - excel_release.Excel.Interfaces.FilterPivotHierarchyData.fields
-  - excel_release.Excel.Interfaces.FilterPivotHierarchyData.id
-  - excel_release.Excel.Interfaces.FilterPivotHierarchyData.name
-  - excel_release.Excel.Interfaces.FilterPivotHierarchyData.position
-- uid: excel_release.Excel.Interfaces.FilterPivotHierarchyData.enableMultipleFilterItems
-  summary: >-
-    <span data-ttu-id="2cc1e-102">确定是否允许多个筛选项。</span><span class="sxs-lookup"><span data-stu-id="2cc1e-102">Determines whether to allow multiple filter items.</span></span>
+  - uid: excel_release.Excel.Interfaces.FilterPivotHierarchyData
+    summary: <span data-ttu-id="cd05d-101">描述通过调用 "filterPivotHierarchy ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="cd05d-101">An interface describing the data returned by calling "filterPivotHierarchy.toJSON()".</span></span>
+    name: Excel.Interfaces.FilterPivotHierarchyData
+    fullName: Excel.Interfaces.FilterPivotHierarchyData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.FilterPivotHierarchyData.enableMultipleFilterItems
+      - excel_release.Excel.Interfaces.FilterPivotHierarchyData.fields
+      - excel_release.Excel.Interfaces.FilterPivotHierarchyData.id
+      - excel_release.Excel.Interfaces.FilterPivotHierarchyData.name
+      - excel_release.Excel.Interfaces.FilterPivotHierarchyData.position
+  - uid: excel_release.Excel.Interfaces.FilterPivotHierarchyData.enableMultipleFilterItems
+    summary: |-
+      <span data-ttu-id="cd05d-102">确定是否允许多个筛选项。</span><span class="sxs-lookup"><span data-stu-id="cd05d-102">Determines whether to allow multiple filter items.</span></span>
 
+      <span data-ttu-id="cd05d-103">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cd05d-103">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: enableMultipleFilterItems
+    fullName: enableMultipleFilterItems
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'enableMultipleFilterItems?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.FilterPivotHierarchyData.fields
+    summary: |-
+      <span data-ttu-id="cd05d-104">返回与 FilterPivotHierarchy 相关联的 PivotFields。</span><span class="sxs-lookup"><span data-stu-id="cd05d-104">Returns the PivotFields associated with the FilterPivotHierarchy.</span></span>
 
-    <span data-ttu-id="2cc1e-103">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2cc1e-103">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: enableMultipleFilterItems
-  fullName: enableMultipleFilterItems
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'enableMultipleFilterItems?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.FilterPivotHierarchyData.fields
-  summary: >-
-    <span data-ttu-id="2cc1e-104">返回与 FilterPivotHierarchy 相关联的 PivotFields。</span><span class="sxs-lookup"><span data-stu-id="2cc1e-104">Returns the PivotFields associated with the FilterPivotHierarchy.</span></span>
+      <span data-ttu-id="cd05d-105">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cd05d-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: fields
+    fullName: fields
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'fields?: Excel.Interfaces.PivotFieldData[];'
+      return:
+        type:
+          - 'Excel.Interfaces.PivotFieldData[]'
+  - uid: excel_release.Excel.Interfaces.FilterPivotHierarchyData.id
+    summary: |-
+      <span data-ttu-id="cd05d-106">FilterPivotHierarchy 的 ID。</span><span class="sxs-lookup"><span data-stu-id="cd05d-106">Id of the FilterPivotHierarchy.</span></span>
 
+      <span data-ttu-id="cd05d-107">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cd05d-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: id
+    fullName: id
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'id?: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.Interfaces.FilterPivotHierarchyData.name
+    summary: |-
+      <span data-ttu-id="cd05d-108">FilterPivotHierarchy 的名称。</span><span class="sxs-lookup"><span data-stu-id="cd05d-108">Name of the FilterPivotHierarchy.</span></span>
 
-    <span data-ttu-id="2cc1e-105">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2cc1e-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: fields
-  fullName: fields
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'fields?: Excel.Interfaces.PivotFieldData[];'
-    return:
-      type:
-      - Excel.Interfaces.PivotFieldData[]
-- uid: excel_release.Excel.Interfaces.FilterPivotHierarchyData.id
-  summary: >-
-    <span data-ttu-id="2cc1e-106">FilterPivotHierarchy 的 ID。</span><span class="sxs-lookup"><span data-stu-id="2cc1e-106">Id of the FilterPivotHierarchy.</span></span>
+      <span data-ttu-id="cd05d-109">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cd05d-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: name
+    fullName: name
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'name?: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.Interfaces.FilterPivotHierarchyData.position
+    summary: |-
+      <span data-ttu-id="cd05d-110">FilterPivotHierarchy 的位置。</span><span class="sxs-lookup"><span data-stu-id="cd05d-110">Position of the FilterPivotHierarchy.</span></span>
 
-
-    <span data-ttu-id="2cc1e-107">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2cc1e-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: id
-  fullName: id
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'id?: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.Interfaces.FilterPivotHierarchyData.name
-  summary: >-
-    <span data-ttu-id="2cc1e-108">FilterPivotHierarchy 的名称。</span><span class="sxs-lookup"><span data-stu-id="2cc1e-108">Name of the FilterPivotHierarchy.</span></span>
-
-
-    <span data-ttu-id="2cc1e-109">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2cc1e-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: name
-  fullName: name
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'name?: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.Interfaces.FilterPivotHierarchyData.position
-  summary: >-
-    <span data-ttu-id="2cc1e-110">FilterPivotHierarchy 的位置。</span><span class="sxs-lookup"><span data-stu-id="2cc1e-110">Position of the FilterPivotHierarchy.</span></span>
-
-
-    <span data-ttu-id="2cc1e-111">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2cc1e-111">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: position
-  fullName: position
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'position?: number;'
-    return:
-      type:
-      - number
+      <span data-ttu-id="cd05d-111">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cd05d-111">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: position
+    fullName: position
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'position?: number;'
+      return:
+        type:
+          - number
