--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.headerfootergroupupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.headerfootergroupupdatedata.yml
@@ -1,16 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: ea00e288d1472956a2cb096ba43a54d8fad02519
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30116834"
 items:
-- uid: excel_release.Excel.Interfaces.HeaderFooterGroupUpdateData
-  summary: <span data-ttu-id="2a883-101">用于更新 HeaderFooterGroup 对象上的数据的接口, 用于在 "HeaderFooterGroup" 中使用 (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="2a883-101">An interface for updating data on the HeaderFooterGroup object, for use in "headerFooterGroup.set(<!-- -->{ ... }<!-- -->)".</span></span>
-  name: Excel.Interfaces.HeaderFooterGroupUpdateData
-  fullName: Excel.Interfaces.HeaderFooterGroupUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
+  - uid: excel_release.Excel.Interfaces.HeaderFooterGroupUpdateData
+    summary: '<span data-ttu-id="346c9-101">一个用于更新 HeaderFooterGroup 对象上的数据的接口, 可用于 "HeaderFooterGroup (</span><span class="sxs-lookup"><span data-stu-id="346c9-101">An interface for updating data on the HeaderFooterGroup object, for use in "headerFooterGroup.set(</span></span><!-- --><span data-ttu-id="346c9-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="346c9-102"></span></span><!-- --><span data-ttu-id="346c9-103">)".</span><span class="sxs-lookup"><span data-stu-id="346c9-103"></span></span>'
+    name: Excel.Interfaces.HeaderFooterGroupUpdateData
+    fullName: Excel.Interfaces.HeaderFooterGroupUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
