--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.headerfooterupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.headerfooterupdatedata.yml
@@ -1,16 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 9f749dc2387b19654186869607d404e152e5f409
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30109323"
 items:
-- uid: excel_release.Excel.Interfaces.HeaderFooterUpdateData
-  summary: <span data-ttu-id="578d1-101">用于更新 HeaderFooter 对象上的数据的接口, 用于在 "HeaderFooter" 中使用 (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="578d1-101">An interface for updating data on the HeaderFooter object, for use in "headerFooter.set(<!-- -->{ ... }<!-- -->)".</span></span>
-  name: Excel.Interfaces.HeaderFooterUpdateData
-  fullName: Excel.Interfaces.HeaderFooterUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
+  - uid: excel_release.Excel.Interfaces.HeaderFooterUpdateData
+    summary: '<span data-ttu-id="e5b2f-101">一个用于更新 HeaderFooter 对象上的数据的接口, 可用于 "HeaderFooter (</span><span class="sxs-lookup"><span data-stu-id="e5b2f-101">An interface for updating data on the HeaderFooter object, for use in "headerFooter.set(</span></span><!-- --><span data-ttu-id="e5b2f-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="e5b2f-102"></span></span><!-- --><span data-ttu-id="e5b2f-103">)".</span><span class="sxs-lookup"><span data-stu-id="e5b2f-103"></span></span>'
+    name: Excel.Interfaces.HeaderFooterUpdateData
+    fullName: Excel.Interfaces.HeaderFooterUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
