--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.linedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.linedata.yml
@@ -1,16 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 3c297310d09ab2047cf020bbca10e26815d196f1
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30108679"
 items:
-- uid: excel_release.Excel.Interfaces.LineData
-  summary: <span data-ttu-id="3846a-101">描述通过调用 "toJSON ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="3846a-101">An interface describing the data returned by calling "line.toJSON()".</span></span>
-  name: Excel.Interfaces.LineData
-  fullName: Excel.Interfaces.LineData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
+  - uid: excel_release.Excel.Interfaces.LineData
+    summary: <span data-ttu-id="19653-101">描述通过调用 "toJSON ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="19653-101">An interface describing the data returned by calling "line.toJSON()".</span></span>
+    name: Excel.Interfaces.LineData
+    fullName: Excel.Interfaces.LineData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
