--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.pagelayoutdata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.pagelayoutdata.yml
@@ -1,16 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 9f05919198694621975185b81b304846061afa6d
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30113047"
 items:
-- uid: excel_release.Excel.Interfaces.PageLayoutData
-  summary: <span data-ttu-id="587b3-101">描述通过调用 "页面布局 ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="587b3-101">An interface describing the data returned by calling "pageLayout.toJSON()".</span></span>
-  name: Excel.Interfaces.PageLayoutData
-  fullName: Excel.Interfaces.PageLayoutData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
+  - uid: excel_release.Excel.Interfaces.PageLayoutData
+    summary: <span data-ttu-id="0bc82-101">描述通过调用 "页面布局 ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="0bc82-101">An interface describing the data returned by calling "pageLayout.toJSON()".</span></span>
+    name: Excel.Interfaces.PageLayoutData
+    fullName: Excel.Interfaces.PageLayoutData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
