--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.pagelayoutupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.pagelayoutupdatedata.yml
@@ -1,16 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 3a8827481a9790df90b4438a7f35e6d4db8aad78
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30110982"
 items:
-- uid: excel_release.Excel.Interfaces.PageLayoutUpdateData
-  summary: <span data-ttu-id="08f0d-101">用于更新页面布局对象上的数据的接口, 用于在 "页面布局" 中使用 (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="08f0d-101">An interface for updating data on the PageLayout object, for use in "pageLayout.set(<!-- -->{ ... }<!-- -->)".</span></span>
-  name: Excel.Interfaces.PageLayoutUpdateData
-  fullName: Excel.Interfaces.PageLayoutUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
+  - uid: excel_release.Excel.Interfaces.PageLayoutUpdateData
+    summary: '<span data-ttu-id="16ec1-101">一个用于更新页面布局对象上的数据的接口, 可用于 "页面布局 (</span><span class="sxs-lookup"><span data-stu-id="16ec1-101">An interface for updating data on the PageLayout object, for use in "pageLayout.set(</span></span><!-- --><span data-ttu-id="16ec1-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="16ec1-102"></span></span><!-- --><span data-ttu-id="16ec1-103">)".</span><span class="sxs-lookup"><span data-stu-id="16ec1-103"></span></span>'
+    name: Excel.Interfaces.PageLayoutUpdateData
+    fullName: Excel.Interfaces.PageLayoutUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
